--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -1,104 +1,379 @@
 /* Import of Raleway (main font) */
 @font-face {
-    font-family: 'Raleway';
-    src: url('/fonts/Raleway.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Raleway";
+  src: url("./fonts/Raleway.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Import of Raleway (Medium) */
+@font-face {
+  font-family: "Raleway-Medium";
+  src: url("./fonts/Raleway-Medium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 /* Import of Victor Mono */
 @font-face {
-    font-family: 'Victor Mono';
-    src: url('/fonts/VictorMono.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Victor Mono";
+  src: url("./fonts/VictorMono.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 /* Apply things like font to the whole body */
 body {
-    font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 /* Nav menu */
 .nav-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 20%;
-    height: 100%;
-    background-color: #333;
-    color: #fff;
-    padding: 1%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 20%;
+  height: 100%;
+  background-color: #333;
+  color: #fff;
+  padding: 1%;
 }
 
 .nav-menu .logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 20%;
-    width: 100%;
-    margin-bottom: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20%;
+  width: 100%;
+  margin-bottom: 5%;
+  font-family: "Raleway-Medium", sans-serif;
 }
 
 /* Nav menu titel */
 .nav-menu h1 {
-    font-size: 24px;
-    margin-bottom: 15%;
+  font-size: 24px;
+  margin-bottom: 15%;
 }
 
 /* Nav menu lists */
 .nav-menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-menu li {
-    margin-bottom: 4%;
+  margin-bottom: 4%;
 }
 
 /* Nav menu button */
 .nav-menu button {
-    display: block;
-    padding: 4%;
-    color: #fff;
-    background-color: #333;
-    border: none;
-    text-align: left;
-    width: 100%;
-    font-family: "Raleway", sans-serif;
+  display: block;
+  padding: 4%;
+  color: #fff;
+  background-color: #333;
+  border: none;
+  text-align: left;
+  width: 100%;
+  font-family: "Raleway", sans-serif;
 }
 
 .nav-menu button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* Nav menu current page item */
 .nav-menu .current {
-    margin-left: 4%;
-    font-weight: bold;
-    font-size: 14px;
+  margin-left: 4%;
+  font-weight: bold;
+  font-size: 14px;
 }
 
 /* Only the the home button */
 .nav-menu .current-home {
-    font-weight: bold;
-    font-size: 14px;
+  font-weight: bold;
+  font-size: 14px;
 }
 
 /* Nav settings button */
 .nav-menu .settings {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* Never ever specify the hight, it will break everything */
-    width: 25%;
-    position: absolute;
-    bottom: 5%;
-    background-color: transparent;
-    border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* Never ever specify the hight, it will break everything */
+  width: 25%;
+  position: absolute;
+  bottom: 5%;
+  background-color: transparent;
+  border: none;
 }
 
 .nav-menu .settings:hover {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+/* Hide and show content */
+.content-area div:not(.active) {
+  display: none;
+}
+
+/* Content area */
+.content-area {
+  margin-left: 20%;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  /* position: fixed; Can't decide on what's better, will maybe be chnaged idk */
+  width: 80%;
+  height: 100%;
+}
+
+/* Home */
+.home {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+/* Encode */
+.encode {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.encode .input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-family: Victor Mono, monospace;
+  margin-top: 5%;
+}
+
+.encode .convert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  font-family: Raleway, sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.encode .output {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: center;
+  width: 100%;
+  height: 50%;
+  font-family: Victor Mono, monospace;
+}
+
+/* Decode */
+
+.decode {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.decode .input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-family: Victor Mono, monospace;
+  margin-top: 5%;
+}
+
+.decode .convert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  font-family: Raleway, sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.decode .output {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: center;
+  width: 100%;
+  height: 50%;
+  font-family: Victor Mono, monospace;
+}
+
+/* IP location */
+
+.ip_location {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.ip_location .input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15ems;
+  font-family: Victor Mono, monospace;
+  margin-top: 15%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.ip_location .convert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  font-family: Raleway, sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ip_location .output {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: center;
+  width: 100%;
+  height: 50%;
+  font-family: Victor Mono, monospace;
+}
+
+/* Password generator */
+
+.password_generator {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.password_generator .length {
+  width: 95%;
+}
+
+.password_generator .pwd-table {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+.password_generator .convert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  font-family: Raleway, sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.password_generator .output {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: center;
+  width: 100%;
+  height: 50%;
+  font-family: Victor Mono, monospace;
+}
+
+/* QR code generator */
+.qr_code_generator {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.qr_code_generator .input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-family: Victor Mono, monospace;
+  margin-top: 5%;
+}
+
+.qr_code_generator .convert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  font-family: Raleway, sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.qr_code_generator .output {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: center;
+  width: 100%;
+  height: 50%;
+  font-family: Victor Mono, monospace;
+}
+
+/* Stegano */
+.steganography {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.steganography table {
+  width: 100%;
+}
+
+.steganography .title {
+  margin-bottom: 5%;
+}
+
+.steganography .subtitle {
+  font-size: 24px;
+}
+
+.steganography form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+}
+
+.steganography form label {
+  margin: 10px;
+}
+
+.steganography form input[type="file"] {
+  margin: 10px;
+}
+
+.steganography form input[type="text"] {
+  margin: 10px;
+  padding: 5px;
+  width: 200px;
+}
+
+.steganography form button {
+  margin: 10px;
+  padding: 5px;
+  width: 100px;
+}
+
+.steganography form img {
+  margin: 10px;
+  max-width: 100%;
+}
+
+.steganography form textarea {
+  margin: 10px;
+  padding: 5px;
+  width: 200px;
+  height: 100px;
 }
